--- a/app/static/result1.html
+++ b/app/static/result1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>What Kind of Cloth?</title>
+    <title>What Kind of ?</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
