--- a/app/static/index.html
+++ b/app/static/index.html
@@ -42,6 +42,7 @@
 				<div class="container-contact100-form-btn">
 					<div class="wrap-contact100-form-btn">
 						<div class="contact100-form-bgbtn"></div>
+						<!--button class should be copyright @pankajmathur.com contact100-form-btn -->
 						<button type = "button" id = "submit_btn" class="contact100-form-btn">
 							<span>
 								Upload & Analyze Image
